--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ input {
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('./images/banner.png');
+    background-image: url('./images/home__banner.png');
     position: relative;
     z-index: 0;
 }
@@ -125,3 +125,68 @@ nav .menu-btn,
     display: none;
 }
 /* END Nav */
+
+/* START Name */
+.name {
+    text-align: center;
+    font-family: 'Montserrat';
+    width: 900px;
+    position: absolute;
+    left: 50%;
+    top: 55%;
+    transform: translate(-50%, -55%);
+}
+
+.name span {
+    color: #FF1414;
+}
+
+.name .details {
+    font-size: 23px;
+    color: #c5c5c5;
+}
+
+.name h2 {
+    font-family: 'Lato';
+    font-size: 2.7rem;
+    margin: 0px;
+    letter-spacing: 2px;
+    color: #ffffff;
+}
+
+.name h1 {
+    font-family: 'Lato';
+    font-size: 5rem;
+    margin: 0px;
+    letter-spacing: 2px;
+    color: #ffffff;
+}
+/* END Name */
+
+/* START Header */
+.header-btns {
+    display: flex;
+    margin-top: 40px;
+    margin-left: 40%;
+}
+
+.header-btn {
+    width: 160px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.4rem;
+    background-color: #FF1414;
+    box-shadow: 5px 10px 30px rgba(255, 2, 2, 0.336);
+    border-radius: 5px;
+    color: #ffffff;
+}
+
+.header-btn:hover {
+    background-color: transparent;
+    transition: all ease 0.5s;
+    color: #ffffff;
+    border: 2px solid #FF1414;
+}
+/* END Header */
