--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ input {
 /* START Main */
 #main {
     width: 100%;
-    height: 768px;
+    height: 500px;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -190,3 +190,165 @@ nav .menu-btn,
     border: 2px solid #FF1414;
 }
 /* END Header */
+
+/* START Feature Section */
+#features {
+    width: 100%;
+    box-sizing: border-box;
+    font-family: 'Lato';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 40px;
+    background-color: #000000;
+}
+
+#features h1 {
+    color: #fff;
+    font-size: 3rem;
+}
+
+.a-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+
+
+}
+
+.a-box {
+    background-color: #000000;
+    width: 250px;
+    height: 400px;
+    margin: 20px;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: 0.4s ease-in-out;
+    position: relative;
+}
+
+.a-b-img {
+    width: 100%;
+    height: 60%;
+
+}
+
+.a-b-img img {
+    padding: 15px;
+    margin-top: 40px;
+    width: 100%;
+    height: 50%;
+
+}
+
+.a-box:hover {
+    border: 1px solid #FF1414;
+    box-shadow: 2px 2px 12px rgba(184, 0, 0, 0.445);
+}
+
+.a-b-text {
+    width: 100%;
+    height: 40%;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+.a-b-text h2 {
+    color: #fff;
+}
+
+.a-b-text p {
+    margin: 0px;
+    color: #ffffffa6;
+    font-size: 1.1rem;
+    font-family: 'Lato';
+    display: block;
+    display: -webkit-box;
+    max-width: 80%;
+    margin-top: 5px;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 10px;
+}
+
+.a-b-text p:hover {
+    color: #ffffff;
+}
+
+.a-b-text a {
+    margin-top: 15px;
+}
+/* END Features Section */
+
+/* START Presentation Section */
+#presentaion {
+    padding-top: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+.pr-heading {
+    text-align: center;
+    font-family: 'Lato';
+    width: 100%;
+    height: 600px;
+    margin: 50px auto 20px;
+    background-image: url('./images/home__offer.png');
+    background-size: 100%;
+    padding-top: 350px;
+}
+
+.pr-heading span {
+    color: #FF1414;
+}
+
+.pr-heading .details {
+    font-size: 23px;
+    color: #c5c5c5;
+}
+
+.pr-heading .details {
+    font-size: 1.2rem;
+}
+
+.pr-heading h1 {
+    font-family: 'Lato';
+    font-size: 4rem;
+    margin: 0px;
+    letter-spacing: 2px;
+    color: #ffffff;
+}
+
+.pr-btns {
+    display: flex;
+    width: 100%;
+}
+
+.pr-btn {
+    width: 160px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.4rem;
+    background-color: #FF1414;
+    box-shadow: 5px 10px 30px rgba(255, 2, 2, 0.336);
+    border-radius: 5px;
+    color: #ffffff;
+    margin: 10px auto;
+}
+
+.pr-btn:hover {
+    background-color: transparent;
+    transition: all ease 0.5s;
+    color: #ffffff;
+    border: 2px solid #FF1414;
+}
+/* END Presentation Section */
