--- a/src/index.css
+++ b/src/index.css
@@ -361,14 +361,12 @@ nav .menu-btn,
 
 /* START About section */
 #about {
-  margin-top: 100px;
   width: 100%;
-  height: 120vh;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 5% 0px 5%;
+  padding: 0px 5% 0px 5%;
   position: relative;
 }
 
@@ -420,3 +418,58 @@ nav .menu-btn,
 }
 
 /* END About section */
+
+/* START Contact section */
+#contact {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#contact h1 {
+  color: #fff;
+  font-size: 3rem;
+}
+
+#contact form {
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+#contact form input,
+#contact form textarea {
+  width: 100%;
+  height: 50px;
+  margin: 5px 0px;
+  padding: 10px;
+  border: none;
+  outline: none;
+  background-color: #ffffff2d;
+  color: #ffffff;
+  border-radius: 5px;
+}
+
+#contact form textarea {
+  height: 150px;
+}
+
+#contact form input[type="submit"] {
+  height: 45px;
+  background: linear-gradient(90deg, #FF1414 20%, #f70000);
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+@media(max-width:620px) {
+  #contact form {
+    width: 90%;
+  }
+}
+
+/* END Contact section */
