--- a/src/index.css
+++ b/src/index.css
@@ -497,3 +497,289 @@ nav .menu-btn,
 }
 /* END Footer */
 
+/* START Responsible */
+@media(max-width:1190px) {
+  #main {
+    background-size: 1150px !important;
+  }
+
+  .name {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+  .name h2 {
+    font-size: 1.5rem;
+  }
+
+  .name h1 {
+    font-size: 3rem;
+  }
+
+  .name .details {
+    font-size: 1rem;
+  }
+
+  .pr-heading {
+    text-align: center;
+  }
+
+  .pr-heading h2 {
+    font-size: 1.5rem;
+  }
+
+  .pr-heading h1 {
+    font-size: 3rem;
+  }
+
+  .pr-heading .details {
+    font-size: 1rem;
+  }
+
+  .about-image img {
+    height: 400px;
+  }
+
+  #features {
+    height: auto;
+  }
+
+  .a-container {
+    flex-wrap: wrap;
+  }
+
+  .a-box {
+    flex-grow: 1;
+  }
+
+  .a-b-img img {
+    object-fit: contain;
+  }
+
+
+
+}
+
+@media(max-width:970px) {
+  #main {
+    height: 650px;
+  }
+
+  .name {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .pr-heading {
+    margin-top: -40px;
+  }
+
+  .pr-heading .pr-btns .pr-btn {
+    margin: 20px auto;
+  }
+
+  .pr-heading h1{
+    margin-top: -40px;
+  }
+
+  .about-image {
+    display: none;
+  }
+
+  .header-btn {
+    margin-left: 20%;
+    margin-top: 20px;
+  }
+
+  .pr-btn {
+    margin-left: 20%;
+    margin-top: 20px;
+  }
+
+  #about {
+    justify-content: center;
+    padding-top: 0px;
+    text-align: center;
+
+    margin-top: 0px;
+  }
+
+  .about-text {
+    width: 90%;
+  }
+
+  .about-text h1 {
+    font-size: 4rem;
+  }
+
+  .about-text p {
+    width: 100%;
+  }
+
+  #features {
+    margin-bottom: 100px;
+  }
+}
+
+@media(max-width:600px) {
+  .name {
+    width: 60%;
+  }
+
+  .pr-heading {
+    width: 100%;
+  }
+
+  #footer{
+    padding: 20px 20px;
+  }
+  
+  .ft-socials a{
+    margin-right: 15px;
+  }
+  
+  .ft-socials a img{
+    width: 35px;
+  }
+}
+
+@media(max-width:1100px) {
+  .menu-icon {
+    display: block;
+  }
+
+  nav {
+    justify-content: space-between;
+    height: 65px;
+    padding: 0px 30px;
+  }
+
+  .logo img {
+    width: 70px;
+  }
+
+  .header-btns {
+    margin: 0;
+  }
+
+  .pr-btns {
+    margin: 0;
+  }
+
+  .menu {
+    display: none;
+    position: absolute;
+    top: 65px;
+    left: 0px;
+    background-color: #000000;
+    border-bottom: 4px solid #FF1414;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+  }
+
+  .menu li {
+    width: 100%;
+  }
+
+  nav .menu li a {
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+    padding: 25px;
+    border: 1px solid rgba(38, 38, 38, 0.03);
+  }
+
+  nav .menu-icon {
+    cursor: pointer;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+  }
+
+  nav .menu-icon .nav-icon {
+    background-color: #ffffff;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background 0.2s ease-out;
+    width: 24px;
+  }
+
+  nav .menu-icon .nav-icon:before,
+  nav .menu-icon .nav-icon:after {
+    background: rgb(255, 255, 255);
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all ease-out 0.2s;
+    width: 100%;
+  }
+
+  nav .menu-icon .nav-icon:before {
+    top: 6px;
+  }
+
+  nav .menu-icon .nav-icon:after {
+    top: -6px;
+  }
+
+  nav .menu-btn:checked~.menu-icon .nav-icon {
+    background: transparent;
+  }
+
+  nav .menu-btn:checked~.menu-icon .nav-icon:before {
+    transform: rotate(-45deg);
+    top: 0;
+  }
+
+  nav .menu-btn:checked~.menu-icon .nav-icon:after {
+    transform: rotate(45deg);
+    top: 0;
+  }
+
+  nav .menu-btn {
+    display: none;
+  }
+
+  nav .menu-btn:checked~.menu {
+    display: block;
+  }
+}
+
+@media(max-width:410px) {
+  .a-box {
+    width: 100%;
+    height: 400px;
+  }
+
+  .pr-heading h1{
+    margin-top: -80px;
+  }
+ 
+  #footer{
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .ft-socials a:not(:last-child){
+    margin-right: 10px;
+  }
+  
+  .ft-socials a:last-child{
+    margin-right: 0;
+  }
+
+  .ft-with-love{
+    margin-top: 10px;
+  }
+}
+
+/* END Responsible */
